[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/big_white.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Lock/LockScreen/LockScreen.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "//---CRT Shader---
shader_type canvas_item;

uniform float scanline_count : hint_range(0, 1800) = 50.0;

vec2 uv_curve(vec2 uv)
{
	uv = (uv - 0.5) * 2.0;
	
	//You can modify the numbers and try different values
	uv.x *= 1.0 + pow(abs(uv.y) / 3.0, 2.0);
	uv.y *= 1.0 + pow(abs(uv.x) / 3.0, 2.0);
	
	//The scale part (you can delete it when you want)
	uv /= 1.2;
	
	uv = (uv/2.0) + 0.5;
	return uv;
}


void fragment()
{	
	float PI = 3.14159;
	
	//You can modify the *3.0, *-3.0 for a bigger or smaller 
	float r = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x*0.0), 0.0).r;
	float g = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x*3.0), 0.0).g;
	float b = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x*-3.0), 0.0).b;
	
	
	//If you dont want scanlines you can just delete this part
	float s = sin(uv_curve(SCREEN_UV).y * scanline_count * PI * 2.0);
	s = (s * 0.5 + 0.5) * 0.9 + 0.1;
	vec4 scan_line = vec4(vec3(pow(s, 0.25)), 1.0);
	
	
	COLOR = vec4(r, g, b, 1.0) * scan_line;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scanline_count = 200.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.91, 0.364, 0.364, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.913725, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.91, 0.2002, 0.2002, 1 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.4224, 0.66, 0.3432, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.32549, 0.658824, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.29865, 0.66, 0.1782, 1 )

[sub_resource type="Theme" id=10]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )

[sub_resource type="Animation" id=11]
resource_name = "error"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Control/MarginContainer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.403922, 0.764706, 0.313726, 0.647059 ), Color( 0.996078, 0.278431, 0.278431, 0.647059 ), Color( 0.403922, 0.764706, 0.313726, 0.647059 ), Color( 0.996078, 0.278431, 0.278431, 0.647059 ), Color( 0.403922, 0.764706, 0.313726, 0.647059 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "unlocked"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Control/MarginContainer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.403922, 0.764706, 0.313726, 0.647059 ), Color( 0.0588235, 0.239216, 0.866667, 0.647059 ), Color( 0.403922, 0.764706, 0.313726, 0.647059 ), Color( 0.0588235, 0.239216, 0.866667, 0.647059 ), Color( 0.403922, 0.764706, 0.313726, 0.647059 ), Color( 0.0588235, 0.239216, 0.866667, 0.647059 ) ]
}

[node name="LockScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.5
margin_top = -163.0
margin_right = 264.5
margin_bottom = 163.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
label = NodePath("VBoxContainer/Control/MarginContainer/Label")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.290196 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.388235, 0.427451, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 529.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRT" type="ColorRect" parent="VBoxContainer/Control/MarginContainer"]
material = SubResource( 2 )
margin_left = 10.0
margin_top = 10.0
margin_right = 519.0
margin_bottom = 70.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Control/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 519.0
margin_bottom = 70.0
color = Color( 0.403922, 0.764706, 0.313726, 0.647059 )

[node name="Label" type="Label" parent="VBoxContainer/Control/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 519.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "1234"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 529.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 519.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 320.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 20

[node name="row1" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="b1" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row1"]
margin_right = 93.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "1"

[node name="b2" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row1"]
margin_left = 113.0
margin_right = 206.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "2"

[node name="b3" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row1"]
margin_left = 226.0
margin_right = 320.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "3"

[node name="row2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 320.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="b4" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row2"]
margin_right = 93.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "4"

[node name="b5" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row2"]
margin_left = 113.0
margin_right = 206.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="b6" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row2"]
margin_left = 226.0
margin_right = 320.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "6"

[node name="row3" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 320.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="b7" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row3"]
margin_right = 93.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "7"

[node name="b8" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row3"]
margin_left = 113.0
margin_right = 206.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "8"

[node name="b9" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row3"]
margin_left = 226.0
margin_right = 320.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "9"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 324.0
margin_right = 344.0
margin_bottom = 222.0
custom_constants/margin_right = 20

[node name="side pannel" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 348.0
margin_right = 509.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="backspace" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/side pannel"]
margin_right = 161.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "<="

[node name="delete" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/side pannel"]
margin_top = 80.0
margin_right = 161.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "DEL"

[node name="confirm" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/side pannel"]
margin_top = 161.0
margin_right = 161.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 10 )
custom_fonts/font = ExtResource( 1 )
text = "enter"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/error = SubResource( 11 )
anims/unlocked = SubResource( 12 )

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row1/b1" to="." method="_on_b1_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row1/b2" to="." method="_on_b2_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row1/b3" to="." method="_on_b3_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row2/b4" to="." method="_on_b4_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row2/b5" to="." method="_on_b5_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row2/b6" to="." method="_on_b6_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row3/b7" to="." method="_on_b7_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row3/b8" to="." method="_on_b8_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/row3/b9" to="." method="_on_b9_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/side pannel/backspace" to="." method="_on_backspace_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/side pannel/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/side pannel/confirm" to="." method="_on_confirm_pressed"]
